@@ -1,3 +1,5 @@
+Jun 06 2003  2.9.1  Implemented wireless-extention IOCTL fetching of current
+                     channel for the appropriate capture types.
 Jun 04 2003  2.9.1  Implemented dronesource buffer resyncs
                     Updated kismet_drone to use new forked packet paths
 Jun 03 2003  2.9.1  Stubbed FetchChannel
